# reflect-cpp26

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: clang-p2996.Dockerfile
.github/workflows/: build-image.yml  ci.yml
benchmarks/: README.md  bench_json.cpp
examples/: args.cpp  compare.cpp  critical_issues.cpp  diff.cpp  enum.cpp  format.cpp  generic.cpp  json.cpp  print.cpp  showcase.cpp  tuple.cpp  type_name.cpp  visit.cpp
include/reflect/: args.hpp  compare.hpp  diff.hpp  enum.hpp  format.hpp  json.hpp  print.hpp  reflect.hpp  traits.hpp  tuple.hpp  type_name.hpp  visit.hpp
scripts/: docker-build.sh  docker-run.sh  docker-test.sh  verify-image-pin.sh  verify-tests-listed.sh
tests/: compile_fail_map_string_view.cpp  test_args.cpp  test_critical_issues.cpp  test_enum.cpp  test_json.cpp  test_struct.cpp
tests/install-smoke-test/: CMakeLists.txt  main.cpp
